--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World, This is Nithish Kumar Srinivasan</h1>
+    <h1>This is Nithish Kumar Srinivasan</h1>
 </body>
 </html>
